--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ form {
     width: 300px;
     border-radius: 6px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-}
+} 
 
 input {
     width: 280px;
@@ -44,6 +44,10 @@ button {
     border-radius: 5px;
     font-size: 14px;
     cursor: pointer;
+}
+
+.second_button {
+    width: 100% !important;
 }
 
 button:hover {
